force-app/main/default/objects/Guest_Feedback_Survey__c/Guest_Feedback_Survey__c.object-meta.xml
<CustomObject>
    <description>.</description>
    <label>Guest Feedback Survey</label>
    <nameField>
        <displayFormat>FS-{0000000}</displayFormat>
        <label>Guest Feedback Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Feedback Survey&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>