force-app/main/default/objects/Guest_Feedback_Survey__c/fields/HFS_Experience__c.field-meta.xml
<CustomField>
    <fullName>HFS_Experience__c</fullName>
    <description>.</description>
    <label>HFS Experience</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Guest Feedback Survey&apos;s</relationshipLabel>
    <relationshipName>Guest_Feedback_Survey_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>