force-app/main/default/objects/Guest_Feedback_Survey__c/fields/Likely_to_recommend_numeric__c.field-meta.xml
<CustomField>
    <fullName>Likely_to_recommend_numeric__c</fullName>
    <description>To convert picklist type to numeric for calculating average</description>
    <formula>VALUE(Text(  Likely_to_recommend__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Likely to recommend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>