force-app/main/default/objects/Guest_Feedback_Survey__c/fields/Satisfaction_level__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_level__c</fullName>
    <description>.</description>
    <label>Satisfaction level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>