force-app/main/default/objects/Guest_Feedback_Survey__c/fields/Satisfaction_Level_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Level_Numeric__c</fullName>
    <description>To convert picklist type to numeric for calculating average</description>
    <formula>VALUE(Text( Satisfaction_level__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Satisfaction Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>