force-app/main/default/objects/Guest_Feedback_Survey__c/fields/Value_of_spend_today__c.field-meta.xml
<CustomField>
    <fullName>Value_of_spend_today__c</fullName>
    <description>.</description>
    <label>Value of spend today</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than planned</fullName>
            </value>
            <value>
                <fullName>More than planned</fullName>
            </value>
            <value>
                <fullName>Considerably more than planned</fullName>
            </value>
            <value>
                <fullName>Spent as much as expected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>