force-app/main/default/objects/Guest_Feedback_Survey__c/fields/What_could_we_improve__c.field-meta.xml
<CustomField>
    <fullName>What_could_we_improve__c</fullName>
    <description>.</description>
    <label>What could we improve</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>